# ellip-equal-subdivision

./: .gitignore  README.md  ellipse.py  example.py  main.py  pyproject.toml  subdivide_ellipse.py
ellipsetools/: ellipse.py  subdivide_ellipse.py
examples/: cnc_drill_holes.py
